# browser-iroh-demo

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
public/: browser_iroh_net_demo.d.ts  browser_iroh_net_demo.js  browser_iroh_net_demo_bg.wasm.d.ts  index.html
src/: lib.rs  serve.rs
