[package]
name = "browser-iroh-net-demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "serve-pong"
path = "src/serve.rs"
doc = false

[dependencies]
anyhow = "1.0.86"
console_error_panic_hook = "0.1.7"
futures-lite = "2.5.0"
getrandom = { version = "0.2.15", features = ["js"] }
hex = "0.4.3"
iroh = { git = "https://github.com/n0-computer/iroh.git", branch = "matheus23/iroh-browser", version = "0.31", default-features = false }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-subscriber-wasm = "0.1.0"
wasm-bindgen = "=0.2.100"
wasm-bindgen-futures = "0.4"
url = "2.5.4"
web-time = "*"

[dev-dependencies]
tokio = { version = "1.38.1", features = ["full"] }

[profile.release]
codegen-units = 1
strip = "symbols"
debug = false
lto = true
opt-level = "z"
panic = 'abort'
